packages/fortifier-macros/tests/validations/phone-number/unknown_fail.stderr
error: unknown parameter
 --> tests/validations/phone-number/unknown_fail.rs:5:29
  |
5 |     #[validate(phone_number(unknown = true))]
  |                             ^^^^^^^
